fix: menu display on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,7 @@
 // Site structure
 
 .container {
+  min-width: 250px;
   max-width: 50rem;
   padding-left:  1.5rem;
   padding-right: 1.5rem;
