--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,17 +5,15 @@
 .masthead {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  margin-bottom: 3rem;
   text-align: center;
 }
 
 .masthead-title {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: $midnight-text-color;
   position: relative;
   text-align: center;
-  //padding-right: 12px;
 
   @media (prefers-color-scheme: dark) {
     color: $midnight-text-color-dark;
@@ -30,6 +28,7 @@
   }
 
   small {
+    display: none;
     font-size: 50%;
     font-weight: 400;
     opacity: 0.5;
@@ -42,6 +41,7 @@
     }
 
     small {
+      display: inherit;
       font-size: 65%;
     }
   }
@@ -52,6 +52,7 @@
     }
 
     small {
+      display: inherit;
       font-size: 75%;
     }
   }
@@ -68,6 +69,7 @@
   font-weight: 700;
   color: $midnight-text-color;
   border-bottom: 3px solid white;
+  padding-bottom: 8px;
 
   @media (prefers-color-scheme: dark) {
     color: $midnight-text-color-dark;
@@ -77,48 +79,82 @@
     list-style: none;
     margin: 0;
     padding: 0;
-  }
 
-  ul#navigation-list li {
-    display: inline;
-    list-style: none;
-    padding-left: 0;
-    padding-right: 12px;
-    margin: 0;
+    li {
+      display: inline;
+      list-style: none;
+      padding-left: 0;
+      padding-right: 12px;
+      margin: 0;
 
-    color: $midnight-text-color;
-    @media (prefers-color-scheme: dark) {
-      color: $midnight-text-color-dark;
-    }
-
-    a {
       color: $midnight-text-color;
       @media (prefers-color-scheme: dark) {
         color: $midnight-text-color-dark;
       }
 
-      &:focus,
-      &:hover {
-        color: $midnight-strong-accent-light;
+      a {
+        color: $midnight-text-color;
         @media (prefers-color-scheme: dark) {
-          color: $midnight-strong-accent-dark;
+          color: $midnight-text-color-dark;
+        }
+
+        &:focus,
+        &:hover {
+          color: $midnight-strong-accent-light;
+          @media (prefers-color-scheme: dark) {
+            color: $midnight-strong-accent-dark;
+          }
+        }
+      }
+
+      &.active a {
+        color: $midnight-accent-light;
+
+        @media (prefers-color-scheme: dark) {
+          color: $midnight-accent-dark;
         }
       }
     }
   }
 }
 
-// ul#navigation-list li a {
-//   color: $midnight-text-color;
-//   @media (prefers-color-scheme: dark) {
-//     color: $midnight-text-color-dark;
-//   }
+/* Hide the link that should open and close the topnav on small screens */
+.navigation .navigation-icon {
+  display: none;
+}
 
-//   &:focus,
-//   &:hover {
-//     color: $midnight-strong-accent-light;
-//     @media (prefers-color-scheme: dark) {
-//       color: $midnight-strong-accent-dark;
-//     }
-//   }
-// }
+@media screen and (max-width: 600px) {
+  .navigation {
+    text-align: left;
+  }
+
+  .navigation ul#navigation-list {
+    display: inline;
+  }
+
+  .navigation ul#navigation-list li:not(.active) {
+    display: none;
+  }
+
+  .navigation a.navigation-icon {
+    float: right;
+    display: block;
+  }
+
+  // The "responsive" class is added to the navigation with JavaScript when the user clicks on the icon.
+  // This class makes the topnav look good on small screens (display the links vertically instead of horizontally)
+  .navigation.responsive {
+    position: relative;
+  }
+
+  .navigation.responsive a.navigation-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navigation.responsive ul#navigation-list li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
